--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     </li><!-- chức năng admin -->
                     <li><a href="employee" ng-style="MyStyle"><i class="fa fa-key" ></i> Quản Lí Tài Khoản</a>
                     </li><!-- chức năng admin -->
-                    <li><a href="chart" ng-style="MyStyle"><i class="fa fa-area-chart" ></i> Thống Kê</a>
+                    <li><a href="report" ng-style="MyStyle"><i class="fa fa-area-chart" ></i> Thống Kê</a>
                     </li><!-- chức năng admin -->
                     </li>
                 </ul>
